--- a/style.css
+++ b/style.css
@@ -149,6 +149,29 @@ p.linkcont:hover + div.underbar
     height:200px;
     padding:-1px;
     margin:-3px;
+    border-radius: 10px;
 }
-
+.imageProf
+{
+    position:relative;
+    height:400px;
+    width:400px;
+    border:4px solid black;
+    padding:-1px;
+    margin:-3px;
+    left:35%;
+    border-radius: 20px;
+}
+a:link 
+{
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited 
+{
+    color: purple;
+    background-color: transparent;
+    text-decoration: none;
+}
 
